// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadPipelineDialog renders alternate UI for uploading via URL 1`] = `
<WithStyles(Dialog)
  classes={
    Object {
      "paper": "root",
    }
  }
  id="uploadDialog"
  onClose={[Function]}
  open={false}
>
  <WithStyles(DialogTitle)>
    Upload and name your pipeline
  </WithStyles(DialogTitle)>
  <div
    className=""
  >
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        checked={false}
        control={
          <WithStyles(Radio)
            color="primary"
          />
        }
        id="uploadLocalFileBtn"
        label="Upload a file"
        onChange={[Function]}
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        checked={true}
        control={
          <WithStyles(Radio)
            color="primary"
          />
        }
        id="uploadFromUrlBtn"
        label="Import by URL"
        onChange={[Function]}
      />
    </div>
    <div
      className=""
    >
      URL must be publicly accessible.
    </div>
    <DocumentationCompilePipeline />
    <Input
      label="URL"
      onChange={[Function]}
      required={true}
      value=""
      variant="outlined"
    />
    <Input
      id="uploadFileName"
      label="Pipeline name"
      onChange={[Function]}
      required={true}
      value=""
      variant="outlined"
    />
  </div>
  <WithStyles(DialogActions)>
    <WithStyles(Button)
      id="cancelUploadBtn"
      onClick={[Function]}
    >
      Cancel
    </WithStyles(Button)>
    <BusyButton
      busy={false}
      disabled={true}
      id="confirmUploadBtn"
      onClick={[Function]}
      title="Upload"
    />
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`UploadPipelineDialog renders an active dropzone 1`] = `
<WithStyles(Dialog)
  classes={
    Object {
      "paper": "root",
    }
  }
  id="uploadDialog"
  onClose={[Function]}
  open={false}
>
  <WithStyles(DialogTitle)>
    Upload and name your pipeline
  </WithStyles(DialogTitle)>
  <div
    className=""
  >
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        checked={true}
        control={
          <WithStyles(Radio)
            color="primary"
          />
        }
        id="uploadLocalFileBtn"
        label="Upload a file"
        onChange={[Function]}
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        checked={false}
        control={
          <WithStyles(Radio)
            color="primary"
          />
        }
        id="uploadFromUrlBtn"
        label="Import by URL"
        onChange={[Function]}
      />
    </div>
    <n
      disableClick={true}
      disablePreview={false}
      disabled={false}
      getDataTransferItems={[Function]}
      id="dropZone"
      inputProps={
        Object {
          "tabIndex": -1,
        }
      }
      maxSize={Infinity}
      minSize={0}
      multiple={true}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDrop={[Function]}
      preventDropOnDocument={true}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className="dropOverlay"
      >
        Drop files..
      </div>
      <div
        className=""
      >
        Choose a pipeline package file from your computer, and give the pipeline a unique name.
        <br />
        You can also drag and drop the file here.
      </div>
      <DocumentationCompilePipeline />
      <Input
        InputProps={
          Object {
            "endAdornment": <WithStyles(InputAdornment)
              position="end"
            >
              <WithStyles(Button)
                color="secondary"
                onClick={[Function]}
                style={
                  Object {
                    "margin": 0,
                    "padding": "3px 5px",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                Choose file
              </WithStyles(Button)>
            </WithStyles(InputAdornment)>,
            "readOnly": true,
          }
        }
        label="File"
        onChange={[Function]}
        required={true}
        value=""
        variant="outlined"
      />
    </n>
    <Input
      id="uploadFileName"
      label="Pipeline name"
      onChange={[Function]}
      required={true}
      value=""
      variant="outlined"
    />
  </div>
  <WithStyles(DialogActions)>
    <WithStyles(Button)
      id="cancelUploadBtn"
      onClick={[Function]}
    >
      Cancel
    </WithStyles(Button)>
    <BusyButton
      busy={false}
      disabled={true}
      id="confirmUploadBtn"
      onClick={[Function]}
      title="Upload"
    />
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`UploadPipelineDialog renders closed 1`] = `
<WithStyles(Dialog)
  classes={
    Object {
      "paper": "root",
    }
  }
  id="uploadDialog"
  onClose={[Function]}
  open={false}
>
  <WithStyles(DialogTitle)>
    Upload and name your pipeline
  </WithStyles(DialogTitle)>
  <div
    className=""
  >
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        checked={true}
        control={
          <WithStyles(Radio)
            color="primary"
          />
        }
        id="uploadLocalFileBtn"
        label="Upload a file"
        onChange={[Function]}
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        checked={false}
        control={
          <WithStyles(Radio)
            color="primary"
          />
        }
        id="uploadFromUrlBtn"
        label="Import by URL"
        onChange={[Function]}
      />
    </div>
    <n
      disableClick={true}
      disablePreview={false}
      disabled={false}
      getDataTransferItems={[Function]}
      id="dropZone"
      inputProps={
        Object {
          "tabIndex": -1,
        }
      }
      maxSize={Infinity}
      minSize={0}
      multiple={true}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDrop={[Function]}
      preventDropOnDocument={true}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className=""
      >
        Choose a pipeline package file from your computer, and give the pipeline a unique name.
        <br />
        You can also drag and drop the file here.
      </div>
      <DocumentationCompilePipeline />
      <Input
        InputProps={
          Object {
            "endAdornment": <WithStyles(InputAdornment)
              position="end"
            >
              <WithStyles(Button)
                color="secondary"
                onClick={[Function]}
                style={
                  Object {
                    "margin": 0,
                    "padding": "3px 5px",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                Choose file
              </WithStyles(Button)>
            </WithStyles(InputAdornment)>,
            "readOnly": true,
          }
        }
        label="File"
        onChange={[Function]}
        required={true}
        value=""
        variant="outlined"
      />
    </n>
    <Input
      id="uploadFileName"
      label="Pipeline name"
      onChange={[Function]}
      required={true}
      value=""
      variant="outlined"
    />
  </div>
  <WithStyles(DialogActions)>
    <WithStyles(Button)
      id="cancelUploadBtn"
      onClick={[Function]}
    >
      Cancel
    </WithStyles(Button)>
    <BusyButton
      busy={false}
      disabled={true}
      id="confirmUploadBtn"
      onClick={[Function]}
      title="Upload"
    />
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`UploadPipelineDialog renders open 1`] = `
<WithStyles(Dialog)
  classes={
    Object {
      "paper": "root",
    }
  }
  id="uploadDialog"
  onClose={[Function]}
  open={false}
>
  <WithStyles(DialogTitle)>
    Upload and name your pipeline
  </WithStyles(DialogTitle)>
  <div
    className=""
  >
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        checked={true}
        control={
          <WithStyles(Radio)
            color="primary"
          />
        }
        id="uploadLocalFileBtn"
        label="Upload a file"
        onChange={[Function]}
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        checked={false}
        control={
          <WithStyles(Radio)
            color="primary"
          />
        }
        id="uploadFromUrlBtn"
        label="Import by URL"
        onChange={[Function]}
      />
    </div>
    <n
      disableClick={true}
      disablePreview={false}
      disabled={false}
      getDataTransferItems={[Function]}
      id="dropZone"
      inputProps={
        Object {
          "tabIndex": -1,
        }
      }
      maxSize={Infinity}
      minSize={0}
      multiple={true}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDrop={[Function]}
      preventDropOnDocument={true}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className=""
      >
        Choose a pipeline package file from your computer, and give the pipeline a unique name.
        <br />
        You can also drag and drop the file here.
      </div>
      <DocumentationCompilePipeline />
      <Input
        InputProps={
          Object {
            "endAdornment": <WithStyles(InputAdornment)
              position="end"
            >
              <WithStyles(Button)
                color="secondary"
                onClick={[Function]}
                style={
                  Object {
                    "margin": 0,
                    "padding": "3px 5px",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                Choose file
              </WithStyles(Button)>
            </WithStyles(InputAdornment)>,
            "readOnly": true,
          }
        }
        label="File"
        onChange={[Function]}
        required={true}
        value=""
        variant="outlined"
      />
    </n>
    <Input
      id="uploadFileName"
      label="Pipeline name"
      onChange={[Function]}
      required={true}
      value=""
      variant="outlined"
    />
  </div>
  <WithStyles(DialogActions)>
    <WithStyles(Button)
      id="cancelUploadBtn"
      onClick={[Function]}
    >
      Cancel
    </WithStyles(Button)>
    <BusyButton
      busy={false}
      disabled={true}
      id="confirmUploadBtn"
      onClick={[Function]}
      title="Upload"
    />
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`UploadPipelineDialog renders with a selected file to upload 1`] = `
<WithStyles(Dialog)
  classes={
    Object {
      "paper": "root",
    }
  }
  id="uploadDialog"
  onClose={[Function]}
  open={false}
>
  <WithStyles(DialogTitle)>
    Upload and name your pipeline
  </WithStyles(DialogTitle)>
  <div
    className=""
  >
    <div
      className="flex"
    >
      <WithStyles(WithFormControlContext(FormControlLabel))
        checked={true}
        control={
          <WithStyles(Radio)
            color="primary"
          />
        }
        id="uploadLocalFileBtn"
        label="Upload a file"
        onChange={[Function]}
      />
      <WithStyles(WithFormControlContext(FormControlLabel))
        checked={false}
        control={
          <WithStyles(Radio)
            color="primary"
          />
        }
        id="uploadFromUrlBtn"
        label="Import by URL"
        onChange={[Function]}
      />
    </div>
    <n
      disableClick={true}
      disablePreview={false}
      disabled={false}
      getDataTransferItems={[Function]}
      id="dropZone"
      inputProps={
        Object {
          "tabIndex": -1,
        }
      }
      maxSize={Infinity}
      minSize={0}
      multiple={true}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDrop={[Function]}
      preventDropOnDocument={true}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className=""
      >
        Choose a pipeline package file from your computer, and give the pipeline a unique name.
        <br />
        You can also drag and drop the file here.
      </div>
      <DocumentationCompilePipeline />
      <Input
        InputProps={
          Object {
            "endAdornment": <WithStyles(InputAdornment)
              position="end"
            >
              <WithStyles(Button)
                color="secondary"
                onClick={[Function]}
                style={
                  Object {
                    "margin": 0,
                    "padding": "3px 5px",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                Choose file
              </WithStyles(Button)>
            </WithStyles(InputAdornment)>,
            "readOnly": true,
          }
        }
        label="File"
        onChange={[Function]}
        required={true}
        value=""
        variant="outlined"
      />
    </n>
    <Input
      id="uploadFileName"
      label="Pipeline name"
      onChange={[Function]}
      required={true}
      value=""
      variant="outlined"
    />
  </div>
  <WithStyles(DialogActions)>
    <WithStyles(Button)
      id="cancelUploadBtn"
      onClick={[Function]}
    >
      Cancel
    </WithStyles(Button)>
    <BusyButton
      busy={false}
      disabled={true}
      id="confirmUploadBtn"
      onClick={[Function]}
      title="Upload"
    />
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;
